2010-11-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: add mono image support to the wrappers
	[thanks Arnaud Degroote]

	* example/swig/yarp.i: add chararray interface to help speed
	up image acess in Java [thanks Leo Pape]


2010-11-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: add an efficient Image::setExternal
	method for Python 3.x [thanks Arnaud Degroote]

2010-11-22  Ugo Pattacini <ugo.pattacini@iit.it>

	* src/libYARP_dev/include/yarp/dev/GazeControl.h: added three new methods
        to return the eyes poses.

2010-11-12  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/src/NameClient.cpp: start migrating away
	from old "nameser" carrier to using carrier-neutral
	communication.  This was legacy code used in bootstrapping
	YARP years ago [thanks Daniel Krieg]

2010-11-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpserver/src/TripleSourceCreator.cpp: add an index
	that testing shows boosts performance.

2010-11-10  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/doc/cmd_yarp.dox: document timeout option.

	* src/libYARP_OS/src/Companion.cpp: add timeout option to
	"yarp clean" [thanks Stephane Lallee]

2010-11-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: support PortReader::read callback
	in SWIG-wrapped code [thanks Emanuel Sousa]

2010-11-08  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/doc/persistent_connections.dox: add notes about using 
	persistent connections from code [thanks Charles Lesire-Cabaniols]

2010-10-30  Ugo Pattacini  <ugo.pattacini@iit.it>

	* src/libYARP_dev/include/yarp/dev/CartesianControl.h: added 4 new methods

2010-10-29  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* example/swig/yarp.i: update C# binding for Value::isNull. SWIG
	was guessing wrong virtual/override tag [thanks Stephane Lallee]

2010-10-26  Marco Randazzo <marco.randazzo@iit.it>

	* src\modules\laserHokuyo\*.*