@@ -102,12 +102,15 @@ endif (ENABLE_DASHBOARD_SUBMIT)
 
 #########################################################################
 # Control setting an rpath
-option(ENABLE_FORCE_RPATH "Set an rpath after installing the executables." FALSE)
+
+option(INSTALL_WITH_RPATH "When installing YARP, give executables a full RPATH" FALSE)
+
+option(ENABLE_FORCE_RPATH "Set an rpath after installing the executables (deprecated, please use INSTALL_WITH_RPATH" FALSE)
 mark_as_advanced(ENABLE_FORCE_RPATH)
 
-if (ENABLE_FORCE_RPATH)
-  set(FORCE_RPATH "${CMAKE_INSTALL_PREFIX}/lib" CACHE STRING 
-	"The rpath for the executables.")
+if (INSTALL_WITH_RPATH OR ENABLE_FORCE_RPATH)
+  set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+  set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 endif ()
 
 
