@@ -11,9 +11,4 @@ TARGET_LINK_LIBRARIES(yarp YARP_init)
 ADD_EXECUTABLE(yarpserver yarpserver.cpp)
 TARGET_LINK_LIBRARIES(yarpserver YARP_init)
 
-IF (ENABLE_FORCE_RPATH)
-  SET_TARGET_PROPERTIES( yarp PROPERTIES INSTALL_RPATH ${FORCE_RPATH} )
-  SET_TARGET_PROPERTIES( yarpserver PROPERTIES INSTALL_RPATH ${FORCE_RPATH} )
-ENDIF ()
-
 INSTALL(TARGETS yarp yarpserver COMPONENT utilities DESTINATION bin)
